--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,18 @@
   background-color: #343a40;
 }
 
+.paddingtop{
+    padding-top: 9em;
+}
+
+.titlestyle{
+    margin-bottom: 2em;
+    text-align: center;;
+}
+
+.textcolor{
+  color:#e9ecef;
+}
 /*-----Header-----*/
 
 .navbarfixed{
@@ -59,8 +71,3 @@
 }
 
 /*-----Admin-----*/
-
-.cardtop{
-  margin-top: 5em;
-  margin-bottom: 5em;
-}
