--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
 /*-----General-----*/
+.row{
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .center{
   align-items: center;
@@ -66,7 +70,7 @@
   flex-direction: column;
 }
 
-#rowcard{
+.rowcard{
   justify-content: space-around;
 }
 
