Update image card, controller, model

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,41 +1,41 @@
 /*-----General-----*/
-.row{
+.row {
     margin-left: auto;
     margin-right: auto;
 }
 
-.center{
+.center {
   align-items: center;
   justify-content: center;
 }
 
-.alignleft{
+.alignleft {
   text-align: right;
 }
 
-.sectionmargin{
+.sectionmargin {
   margin-bottom: 5em;
 }
 
-.sectionbackground{
+.sectionbackground {
   background-color: #343a40;
 }
 
-.paddingtop{
+.paddingtop {
     padding-top: 9em;
 }
 
-.titlestyle{
+.titlestyle {
     margin-bottom: 2em;
     text-align: center;;
 }
 
-.textcolor{
+.textcolor {
   color:#e9ecef;
 }
 /*-----Header-----*/
 
-.navbarfixed{
+.navbarfixed {
   position: fixed;
   width: 100%;
   z-index: 1;
@@ -46,17 +46,17 @@
     z-index: -1;
 }
 
-.modal{
+.modal {
   margin-top: 8em;
 }
 
 /*-----Hero-----*/
 
-.herosection{
+.herosection {
   height: 100vh;
 }
 
-.hero{
+.hero {
   height: 100%;
   width: 100%;
   background-image: url(../pictures/ChugachMountains.jpg);
@@ -64,14 +64,19 @@
   background-size: cover;
 }
 
-.herocaption{
+.herocaption {
   height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.rowcard{
+.rowcard {
   justify-content: space-around;
+}
+
+.card-img-top {
+  margin-top: 1em;
+  border-radius: .25rem;
 }
 
 /*-----Admin-----*/
